syntax = "proto3";

option go_package = "/role";

package role;

message RoleCreateRequest {
  string name = 1;
  int32 level = 2;
  string token = 3;
}

message RoleUpdateRequest {
  string id = 1;
  string name = 2;
  int32 level = 3;
  string token = 4;
}

message RoleListRequest {
  string token = 1;
}

message RoleIdRequest {
  string id = 1;
  string token = 2;
}

message RoleResponse {
  string id = 1;
  string name = 2;
}

message RoleIdResponse {
  string code = 1;
  string message = 2;
  RoleResponse data = 3;
}

message RoleListResponse {
  string code = 1;
  string message = 2;
  repeated RoleResponse data = 3;
}

service Role {
  rpc GetList (RoleListRequest) returns (RoleListResponse);
  rpc GetById (RoleIdRequest) returns (RoleIdResponse);
  rpc Add (RoleCreateRequest) returns (RoleResponse);
  rpc Update (RoleUpdateRequest) returns (RoleResponse);
  rpc Delete (RoleIdRequest) returns (RoleResponse);
}