syntax = "proto3";

option go_package = "/user";

import "google/protobuf/timestamp.proto";

package user;

message UserListRequest {
  int32 page = 1;
  int32 limit = 2;
  string token = 3;
}

message UserMeRequest {
  string token = 1;
}

message UserIdRequest {
  string id = 1;
  string token = 2;
}

message UserDeleteRequest {
  string id = 1;
  string token = 2;
}

message UserUpdateRequest {
  string id = 1;
  string username = 2;
  string email = 3;
  string firstName = 4;
  string lastName = 5;
  string avatar = 6;
  string mobile = 7;
  string token = 8;
}

message UserCreateRequest {
  string id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string firstName = 5;
  string lastName = 6;
  string avatar = 7;
  string mobile = 8;
  string token = 9;
}

message UserUpdatePasswordRequest {
  string userId = 1;
  string newPassword = 2;
  string currentPassword = 3;
  string token = 4;
}

message UserUpdatePasswordMeRequest {
  string newPassword = 1;
  string currentPassword = 2;
  string token = 3;
}

message UserData {
  string id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
  string firstName = 5;
  string lastName = 6;
  google.protobuf.Timestamp lastLogin = 7;
  string avatar = 8;
  string mobile = 9;
  repeated UserRoleResponse roles = 10;
  google.protobuf.Timestamp createdAt = 11;
  google.protobuf.Timestamp updatedAt = 12;
}

message PagingResponse {
  repeated UserData list = 1;
  int32 page = 2;
  int32 limit = 3;
  int32 count = 4;
  int32 total = 5;
  int32 start = 6;
  int32 end = 7;
}

message UserResponse {
  string code = 1;
  string message = 2;
  UserData data = 3;
}

message UserRoleResponse {
  string id = 1;
  string name = 2;
}

message UserListResponse {
  string code = 1;
  string message = 2;
  PagingResponse data = 3;
}

message UserDeleteResponse {
  string code = 1;
  string message = 2;
}

service User {
  rpc GetMe (UserMeRequest) returns (UserResponse);
  rpc GetById (UserIdRequest) returns (UserResponse);
  rpc GetList (UserListRequest) returns (UserListResponse);
  rpc Add (UserCreateRequest) returns (UserResponse);
  rpc Update (UserUpdateRequest) returns (UserResponse);
  rpc UpdatePassword (UserUpdatePasswordRequest) returns (UserResponse);
  rpc UpdatePasswordMe (UserUpdatePasswordMeRequest) returns (UserResponse);
  rpc Delete (UserDeleteRequest) returns (UserDeleteResponse);
}